traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:11: error: 'while' expected but '}' found.
} while ((getX()!=getMondeLargeur()) && (getY()!=getMondeHauteur())) 
^TraversalByColumn:11: error: ';' expected but 'while' found.
} while ((getX()!=getMondeLargeur()) && (getY()!=getMondeHauteur())) 
  ^